--- a/voter.ipynb
+++ b/voter.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,196 +41,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# dtype={'type': str} prevents being confused with data type for large data sets\n",
     "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
     "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# combine models via hard voting\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/till/.local/lib/python3.10/site-packages/pytorch_tabnet/abstract_model.py:75: UserWarning: Device used : cpu\n",
-      "  warnings.warn(f\"Device used : {self.device}\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "xgb = XGBClassifier()\n",
-    "xgb.load_model('models/xg/xgboost_full.json')\n",
-    "rf = pickle.load(open('./models/rf/first_try', 'rb'))\n",
-    "nn = TabNetClassifier()\n",
-    "nn.load_model('models/nn/first_try.zip')"
+    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
+    "train_curie = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
+    "test_curie = pd.read_csv('data/test_curie.csv', index_col='id', dtype={'type': str})\n",
+    "train_curie['curie_similarity'] = train_curie.curie_similarity.apply(eval).apply(np.array)\n",
+    "test_curie['curie_similarity'] = test_curie.curie_similarity.apply(eval).apply(np.array)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#data = train_prep.copy()\n",
-    "data = test_prep.copy()"
+    "type_lookup = pd.read_csv('data/type_lookup.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = data.drop('type', axis=1)\n",
-    "labels = data.type\n",
-    "# at least xgboost cannot deal with string labels\n",
-    "label_encoder = LabelEncoder()\n",
-    "label_encoder = label_encoder.fit(labels)\n",
-    "labels = label_encoder.transform(labels)"
+    "type_indicators = {}\n",
+    "with open('data/type_ind_cut.txt', 'r') as f:\n",
+    "    for line in f:\n",
+    "        a = line.split('\\'')\n",
+    "        type = a[1]\n",
+    "        indicators = a[2].split()\n",
+    "        type_indicators[type] = indicators\n",
+    "save_indicators = {}\n",
+    "with open('data/save_indicator.txt', 'r') as f:\n",
+    "    for line in f:\n",
+    "        a = line.split('\\'')\n",
+    "        type = a[1]\n",
+    "        indicators = a[2].split()\n",
+    "        save_indicators[type] = indicators"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
-    "X_test = data.drop('type', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results = pd.DataFrame()\n",
-    "results['id'] = X_test.index\n",
-    "#results['type'] = y_test\n",
-    "\n",
-    "results['rf'] = rf.predict(X_test)\n",
-    "results['nn'] = nn.predict(X_test.values)\n",
-    "results['xg'] = xgb.predict(X_test)\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results.set_index('id', inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results['filter'] = [-1] * len(results)\n",
-    "results['indi'] = [-1] * len(results)\n",
-    "results['save'] = [-1] * len(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "results['emb'] = [-1] * len(results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nlabels = df.type\\n# at least xgboost cannot deal with string labels\\nlabel_encoder = LabelEncoder()\\nlabel_encoder = label_encoder.fit(labels)\\nlabels = label_encoder.transform(labels)\\nX_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\\n'"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "boost_emb = XGBClassifier()\n",
-    "boost_emb.load_model('models/nlp/xgboost.json')\n",
-    "\n",
-    "#df = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
-    "df = pd.read_csv('data/test_curie.csv', index_col='id', dtype={'type': str})\n",
-    "df['curie_similarity'] = df.curie_similarity.apply(eval).apply(np.array)\n",
-    "\n",
-    "features = list(df.curie_similarity.values)\n",
-    "\"\"\"\n",
-    "labels = df.type\n",
-    "# at least xgboost cannot deal with string labels\n",
-    "label_encoder = LabelEncoder()\n",
-    "label_encoder = label_encoder.fit(labels)\n",
-    "labels = label_encoder.transform(labels)\n",
-    "X_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
-    "\"\"\"\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pred = boost_emb.predict(features)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['pred'] = pred"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for index, item in df.iterrows():\n",
-    "        if index in results.index:\n",
-    "            results.loc[index].emb = item.pred\n",
-    "        "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "types = ['photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image',\\\n",
+    "types1 = ['photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image',\\\n",
     "'archaeological find',\\\n",
     "'graphics', 'drawing', 'design/drawing/sketch','caricature','slide',\\\n",
     "'poster','plan', 'paper','notes', 'document', 'certificate',\\\n",
@@ -251,12 +113,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "# categorize types\n",
-    "types = [\n",
+    "types2 = [\n",
     "'sculpture',\\\n",
     "'bag', 'suit', 'doll', 'sheet/linen', 'dish/vessel','jewel', 'tape/ribbon',\\\n",
     "'country',\\\n",
@@ -279,6 +141,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "types = types1"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 90,
    "metadata": {},
    "outputs": [],
@@ -294,28 +165,6 @@
     "        return pred[-1]\n",
     "    else:\n",
     "        return -1\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_indicators = {}\n",
-    "with open('data/type_ind_cut.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        a = line.split('\\'')\n",
-    "        type = a[1]\n",
-    "        indicators = a[2].split()\n",
-    "        type_indicators[type] = indicators\n",
-    "save_indicators = {}\n",
-    "with open('data/save_indicators.txt', 'r') as f:\n",
-    "    for line in f:\n",
-    "        a = line.split('\\'')\n",
-    "        type = a[1]\n",
-    "        indicators = a[2].split()\n",
-    "        save_indicators[type] = indicators"
    ]
   },
   {
@@ -355,6 +204,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# combine models via hard voting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/.local/lib/python3.10/site-packages/pytorch_tabnet/abstract_model.py:75: UserWarning: Device used : cpu\n",
+      "  warnings.warn(f\"Device used : {self.device}\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "xgb = XGBClassifier()\n",
+    "# 'models/xg/xgboost_full.json' 'models/xg/xgboost_0.3.json' 'models/xg/full_smote100.json' 'models/xg/03_smote100.json'\n",
+    "xgb.load_model('models/xg/xgboost_full.json')\n",
+    "\n",
+    "# './models/rf/train_prep_03' './models/rf/train_prep_full'\n",
+    "rf = pickle.load(open('./models/rf/first_try', 'rb'))\n",
+    "\n",
+    "boost_emb = XGBClassifier()\n",
+    "# 'models/nlp/xgboost_full.json' 'models/nlp/xgboost_0.3.json'\n",
+    "boost_emb.load_model('models/nlp/xgboost_0.3.json')\n",
+    "\n",
+    "nn = TabNetClassifier()\n",
+    "nn.load_model('models/nn/first_try.zip')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = train_prep.copy()\n",
+    "#data = test_prep.copy()\n",
+    "\n",
+    "features = data.drop('type', axis=1)\n",
+    "labels = data.type\n",
+    "# at least xgboost cannot deal with string labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(labels)\n",
+    "labels = label_encoder.transform(labels)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
+    "#X_test = data.drop('type', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = pd.DataFrame()\n",
+    "results['id'] = X_test.index\n",
+    "results.set_index('id', inplace=True)\n",
+    "results['type'] = y_test\n",
+    "\n",
+    "results['rf'] = rf.predict(X_test)\n",
+    "results['nn'] = nn.predict(X_test.values)\n",
+    "results['xg'] = xgb.predict(X_test)\n",
+    "\n",
+    "results['filter'] = [-1] * len(results)\n",
+    "results['indi'] = [-1] * len(results)\n",
+    "results['save'] = [-1] * len(results)\n",
+    "results['emb'] = [-1] * len(results)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\nlabels = df.type\\n# at least xgboost cannot deal with string labels\\nlabel_encoder = LabelEncoder()\\nlabel_encoder = label_encoder.fit(labels)\\nlabels = label_encoder.transform(labels)\\nX_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\\n'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = train_curie.copy()\n",
+    "\n",
+    "features = list(df.curie_similarity.values)\n",
+    "\n",
+    "labels = df.type\n",
+    "# at least xgboost cannot deal with string labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(labels)\n",
+    "labels = label_encoder.transform(labels)\n",
+    "X_train, emb_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
+    "\n",
+    "pred = boost_emb.predict(features)\n",
+    "df['pred'] = pred"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 93,
    "metadata": {},
@@ -363,15 +322,6 @@
     "df['filter'] = df.text_features.apply(filtering)\n",
     "df['indicating'] = df.text_features.apply(indicating)\n",
     "df['save'] = df.text_features.apply(save_indicating)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_lookup = pd.read_csv('data/type_lookup.csv')"
    ]
   },
   {
@@ -395,7 +345,8 @@
     "        if index in results.index:\n",
     "            results.loc[index].filter = item['filter']\n",
     "            results.loc[index].indi = item['indicating']\n",
-    "            results.loc[index].save = item['save']"
+    "            results.loc[index].save = item['save']\n",
+    "            results.loc[index].emb = item['pred']"
    ]
   },
   {
@@ -539,7 +490,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#accuracy_score(results.type, results.prediction)\n",
+    "accuracy_score(results.type, results.prediction)\n",
     "#0.9038095238095238\n",
     "#0.9157142857142857\n",
     "#0.9130952380952381\n",
@@ -671,33 +622,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = pd.DataFrame({'id': results.index ,'type': results.prediction})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_lookup = pd.read_csv('data/type_lookup.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 104,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 105,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "submission = pd.DataFrame({'id': results.index ,'type': results.prediction})\n",
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())\n",
     "submission.to_csv('submissions/voter_with_text_ind.csv', index=False)"
    ]
   }
