--- a/xgboost_tries.ipynb
+++ b/xgboost_tries.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,8 @@
     "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
     "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
     "low = pd.read_csv('data/prep_low_thres.csv', index_col='id', dtype={'type': str})\n",
-    "high = pd.read_csv('data/prep_high_thres.csv', index_col='id', dtype={'type': str})"
+    "high = pd.read_csv('data/prep_high_thres.csv', index_col='id', dtype={'type': str})\n",
+    "smote100_full = pd.read_csv('data/train_prepSMOTE100.csv', dtype={'type': str})"
    ]
   },
   {
@@ -60,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,16 +87,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = train_prep.copy()"
+    "data = smote100_full.copy()\n",
+    "data.drop(columns=['Unnamed: 0'], inplace=True, axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,15 +112,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "bst = XGBClassifier(random_state=0)\n",
     "# fit model\n",
-    "bst.fit(X_train, y_train)\n",
+    "bst.fit(features, labels)\n",
     "# make predictions\n",
-    "preds = bst.predict(X_test)"
+    "#preds = bst.predict(X_test)"
    ]
   },
   {
