--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -56,7 +56,8 @@
     "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
     "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
     "low = pd.read_csv('data/prep_low_thres.csv', index_col='id', dtype={'type': str})\n",
-    "high = pd.read_csv('data/prep_high_thres.csv', index_col='id', dtype={'type': str})"
+    "high = pd.read_csv('data/prep_high_thres.csv', index_col='id', dtype={'type': str})\n",
+    "smote100 = pd.read_csv('data/train_prepSMOTE100.csv', dtype={'type': str})"
    ]
   },
   {
@@ -69,17 +70,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data = low.copy()\n",
-    "data = data[data.source=='train']\n",
-    "data = data.drop(columns=['source'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,16 +98,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9860204081632653 0.8952380952380953\n"
+     "ename": "NameError",
+     "evalue": "name 'features' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/random_forest.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rfc \u001b[39m=\u001b[39m RandomForestClassifier(n_estimators\u001b[39m=\u001b[39m\u001b[39m2000\u001b[39m, max_depth\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m, max_features\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rfc\u001b[39m.\u001b[39mfit(features, labels)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39my_pred = rfc.predict(X_test)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint(train_acc, val_acc)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'features' is not defined"
      ]
     }
    ],
    "source": [
-    "rfc = RandomForestClassifier(n_estimators=1000)\n",
-    "rfc.fit(X_train, y_train)\n",
+    "rfc = RandomForestClassifier(n_estimators=2000, max_depth=100, max_features=None, random_state=0)\n",
+    "rfc.fit(features, labels)\n",
+    "\"\"\"\n",
     "\n",
     "y_pred = rfc.predict(X_test)\n",
     "probs = rfc.predict_proba(X_test)\n",
@@ -128,9 +123,11 @@
     "train_acc = accuracy_score(y_train, y_pred)\n",
     "\n",
     "print(train_acc, val_acc)\n",
+    "\"\"\"\n",
     "#0.985204081632653 0.8952380952380953\n",
     "#0.991938775510204 0.8940476190476191\n",
-    "#0.9860204081632653 0.8942857142857142"
+    "#0.9860204081632653 0.8942857142857142\n",
+    "#0.9860204081632653 0.8980952380952381"
    ]
   },
   {
@@ -22858,11 +22855,28 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
-    "pickle.dump(rfc, open('./models/rf/train_prep_full', 'wb'))\n",
-    "loaded_model = pickle.load(open('./models/rf/first_try', 'rb'))"
+    "pickle.dump(rfc, open('./models/rf/train_prep_03_best', 'wb'))\n",
+    "#loaded_model = pickle.load(open('./models/rf/first_try', 'rb'))"
    ]
   },
   {
