--- a/voter_submit.ipynb
+++ b/voter_submit.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "types = types1"
+    "types = types2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -228,10 +228,10 @@
    "source": [
     "xgb = XGBClassifier()\n",
     "# 'models/xg/xgboost_full.json' 'models/xg/xgboost_0.3.json' 'models/xg/full_smote100.json' 'models/xg/03_smote100.json'\n",
-    "xgb.load_model('models/xg/03_smote100.json')\n",
+    "xgb.load_model('models/xg/xgboost_full.json')\n",
     "\n",
     "# './models/rf/train_prep_03' './models/rf/train_prep_full' './models/rf/train_prep_03_best' './models/rf/train_prep_full_best' './models/rf/smote_full_best' './models/rf/smote_03_best\n",
-    "rf = pickle.load(open('./models/rf/train_prep_03' , 'rb'))\n",
+    "rf = pickle.load(open('./models/rf/train_prep_full_best', 'rb'))\n",
     "\n",
     "boost_emb = XGBClassifier()\n",
     "# 'models/nlp/xgboost_full.json' 'models/nlp/xgboost_0.3.json'\n",
@@ -243,36 +243,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = train_prep.copy()\n",
-    "#data = test_prep.copy()\n",
+    "#data = train_prep.copy()\n",
+    "data = test_prep.copy()\n",
     "\n",
     "features = data.drop('type', axis=1)\n",
     "labels = data.type\n",
-    "\n",
+    "\"\"\"\n",
     "# at least xgboost cannot deal with string labels\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder = label_encoder.fit(labels)\n",
     "labels = label_encoder.transform(labels)\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n",
-    "\n",
-    "#X_test = data.drop('type', axis=1)"
+    "\"\"\"\n",
+    "X_test = data.drop('type', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "results = pd.DataFrame()\n",
     "results['id'] = X_test.index\n",
     "results.set_index('id', inplace=True)\n",
-    "results['type'] = y_test\n",
+    "#results['type'] = y_test\n",
     "\n",
     "results['rf'] = rf.predict(X_test)\n",
     "results['nn'] = nn.predict(X_test.values)\n",
@@ -286,12 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = train_curie.copy()\n",
-    "#df = test_curie.copy()\n",
+    "#df = train_curie.copy()\n",
+    "df = test_curie.copy()\n",
     "\n",
     "features = list(df.curie_similarity.values)\n",
     "\n",
@@ -308,18 +308,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "df['filter'] = df.text_features.apply(filtering)\n",
     "df['indicating'] = df.text_features.apply(indicating)\n",
-    "df['save'] = df.text_features.apply(save_indicating)\n",
-    "\n",
+    "df['save'] = df.text_features.apply(save_indicating)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "df['filter'] = df['filter'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
     "df['indicating'] = df['indicating'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
-    "df['save'] = df['save'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)\n",
-    "\n",
+    "df['save'] = df['save'].apply(lambda x: type_lookup[type_lookup.english == x].index[0] if x != -1 else -1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for index, item in df.iterrows():\n",
     "        if index in results.index:\n",
     "            results.loc[index].filter = item['filter']\n",
@@ -330,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -354,7 +368,6 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>type</th>\n",
        "      <th>rf</th>\n",
        "      <th>nn</th>\n",
        "      <th>xg</th>\n",
@@ -372,80 +385,74 @@
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
-       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2080460</th>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>37</td>\n",
-       "      <td>-1</td>\n",
-       "      <td>37</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2773190</th>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
-       "      <td>37</td>\n",
+       "      <th>2652198</th>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
+       "      <td>36</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3195806</th>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
-       "      <td>11</td>\n",
+       "      <th>3851731</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
        "      <td>-1</td>\n",
-       "      <td>11</td>\n",
        "      <td>-1</td>\n",
-       "      <td>11</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3671158</th>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
+       "      <th>1211338</th>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
        "      <td>-1</td>\n",
-       "      <td>12</td>\n",
+       "      <td>8</td>\n",
        "      <td>-1</td>\n",
-       "      <td>12</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4092912</th>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
-       "      <td>43</td>\n",
+       "      <th>231244</th>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
        "      <td>-1</td>\n",
-       "      <td>37</td>\n",
+       "      <td>45</td>\n",
        "      <td>-1</td>\n",
-       "      <td>43</td>\n",
+       "      <td>50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2523607</th>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         type  rf  nn  xg  filter  indi  save  emb\n",
-       "id                                                \n",
-       "2080460    37  37  37  37      -1    37    -1   37\n",
-       "2773190    37  37  37  37      -1    -1    -1   -1\n",
-       "3195806    11  11  11  11      -1    11    -1   11\n",
-       "3671158    12  12  12  12      -1    12    -1   12\n",
-       "4092912    43  43  43  43      -1    37    -1   43"
+       "         rf  nn  xg  filter  indi  save  emb\n",
+       "id                                          \n",
+       "2652198  36  36  36      -1    -1    -1   -1\n",
+       "3851731  22  22  22      -1    -1    -1    1\n",
+       "1211338  52  52  52      -1     8    -1   31\n",
+       "231244   21  21  21      -1    45    -1   50\n",
+       "2523607   8   8   8      -1     8    -1    8"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -463,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -477,31 +484,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "results['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb]), axis=1)"
+    "results['prediction'] = results.apply(lambda row: vote([row.save,row.xg,row.rf,row.emb,row.filter]), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9597619047619048"
-      ]
-     },
-     "execution_count": 126,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "accuracy_score(results.type, results.prediction)\n",
+    "#accuracy_score(results.type, results.prediction)\n",
     "#0.9038095238095238\n",
     "#0.9157142857142857\n",
     "#0.9130952380952381\n",
@@ -524,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -551,12 +547,16 @@
        "      <th>rf</th>\n",
        "      <th>nn</th>\n",
        "      <th>xg</th>\n",
-       "      <th>words</th>\n",
+       "      <th>filter</th>\n",
+       "      <th>indi</th>\n",
+       "      <th>save</th>\n",
        "      <th>emb</th>\n",
        "      <th>prediction</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -573,6 +573,8 @@
        "      <td>36</td>\n",
        "      <td>-1</td>\n",
        "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -580,6 +582,8 @@
        "      <td>22</td>\n",
        "      <td>22</td>\n",
        "      <td>22</td>\n",
+       "      <td>-1</td>\n",
+       "      <td>-1</td>\n",
        "      <td>-1</td>\n",
        "      <td>1</td>\n",
        "      <td>22</td>\n",
@@ -589,7 +593,9 @@
        "      <td>52</td>\n",
        "      <td>52</td>\n",
        "      <td>52</td>\n",
+       "      <td>-1</td>\n",
        "      <td>8</td>\n",
+       "      <td>-1</td>\n",
        "      <td>31</td>\n",
        "      <td>52</td>\n",
        "    </tr>\n",
@@ -598,7 +604,9 @@
        "      <td>21</td>\n",
        "      <td>21</td>\n",
        "      <td>21</td>\n",
+       "      <td>-1</td>\n",
        "      <td>45</td>\n",
+       "      <td>-1</td>\n",
        "      <td>50</td>\n",
        "      <td>21</td>\n",
        "    </tr>\n",
@@ -607,7 +615,9 @@
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
+       "      <td>-1</td>\n",
        "      <td>8</td>\n",
+       "      <td>-1</td>\n",
        "      <td>8</td>\n",
        "      <td>8</td>\n",
        "    </tr>\n",
@@ -616,16 +626,16 @@
        "</div>"
       ],
       "text/plain": [
-       "         rf  nn  xg  words  emb  prediction\n",
-       "id                                         \n",
-       "2652198  36  36  36     -1   -1          36\n",
-       "3851731  22  22  22     -1    1          22\n",
-       "1211338  52  52  52      8   31          52\n",
-       "231244   21  21  21     45   50          21\n",
-       "2523607   8   8   8      8    8           8"
+       "         rf  nn  xg  filter  indi  save  emb  prediction\n",
+       "id                                                      \n",
+       "2652198  36  36  36      -1    -1    -1   -1          36\n",
+       "3851731  22  22  22      -1    -1    -1    1          22\n",
+       "1211338  52  52  52      -1     8    -1   31          52\n",
+       "231244   21  21  21      -1    45    -1   50          21\n",
+       "2523607   8   8   8      -1     8    -1    8           8"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,13 +646,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "submission = pd.DataFrame({'id': results.index ,'type': results.prediction})\n",
     "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())\n",
-    "submission.to_csv('submissions/voter_normal_normal_emb_filter.csv', index=False)"
+    "submission.to_csv('submissions/2.csv', index=False)"
    ]
   }
  ],
@@ -667,7 +677,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
