--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -98,15 +98,14 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'features' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/till/projects/uni/data science/museum_item_classification/random_forest.ipynb Cell 7\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m rfc \u001b[39m=\u001b[39m RandomForestClassifier(n_estimators\u001b[39m=\u001b[39m\u001b[39m2000\u001b[39m, max_depth\u001b[39m=\u001b[39m\u001b[39m100\u001b[39m, max_features\u001b[39m=\u001b[39m\u001b[39mNone\u001b[39;00m, random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m rfc\u001b[39m.\u001b[39mfit(features, labels)\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \n\u001b[1;32m      <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39my_pred = rfc.predict(X_test)\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mprint(train_acc, val_acc)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/till/projects/uni/data%20science/museum_item_classification/random_forest.ipynb#W6sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'features' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n\\ny_pred = rfc.predict(X_test)\\nprobs = rfc.predict_proba(X_test)\\nval_acc = accuracy_score(y_test, y_pred)\\n\\ny_pred = rfc.predict(X_train)\\nprobs = rfc.predict_proba(X_train)\\ntrain_acc = accuracy_score(y_train, y_pred)\\n\\nprint(train_acc, val_acc)\\n'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -22853,29 +22852,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mCanceled future for execute_request message before replies were done"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(rfc, open('./models/rf/train_prep_03_best', 'wb'))\n",
+    "pickle.dump(rfc, open('./models/rf/train_prep_full_best', 'wb'))\n",
     "#loaded_model = pickle.load(open('./models/rf/first_try', 'rb'))"
    ]
   },
