--- a/random_forest_balanced.ipynb
+++ b/random_forest_balanced.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
     "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
     "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
     "train_prepROS = pd.read_csv('data/train_prepROS.csv')\n",
-    "train_prepSMOTE = pd.read_csv('data/train_prepSMOTE.csv')\n"
+    "train_prepSMOTE = pd.read_csv('data/train_prepSMOTE100.csv')\n"
    ]
   },
   {
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,11 +78,31 @@
     "features = data.drop('type', axis=1)\n",
     "labels = data.type\n",
     "# at least xgboost cannot deal with string labels\n",
-    "#label_encoder = LabelEncoder()\n",
-    "#label_encoder = label_encoder.fit(labels)\n",
-    "#labels = label_encoder.transform(labels)\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(labels)\n",
+    "labels = label_encoder.transform(labels)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.3, random_state=0)\n"
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.00001, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([22, 30, 30, ..., 50, 50, 50])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
    ]
   },
   {
@@ -94,23 +114,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>#sk-container-id-1 {color: black;background-color: white;}#sk-container-id-1 pre{padding: 0;}#sk-container-id-1 div.sk-toggleable {background-color: white;}#sk-container-id-1 label.sk-toggleable__label {cursor: pointer;display: block;width: 100%;margin-bottom: 0;padding: 0.3em;box-sizing: border-box;text-align: center;}#sk-container-id-1 label.sk-toggleable__label-arrow:before {content: \"▸\";float: left;margin-right: 0.25em;color: #696969;}#sk-container-id-1 label.sk-toggleable__label-arrow:hover:before {color: black;}#sk-container-id-1 div.sk-estimator:hover label.sk-toggleable__label-arrow:before {color: black;}#sk-container-id-1 div.sk-toggleable__content {max-height: 0;max-width: 0;overflow: hidden;text-align: left;background-color: #f0f8ff;}#sk-container-id-1 div.sk-toggleable__content pre {margin: 0.2em;color: black;border-radius: 0.25em;background-color: #f0f8ff;}#sk-container-id-1 input.sk-toggleable__control:checked~div.sk-toggleable__content {max-height: 200px;max-width: 100%;overflow: auto;}#sk-container-id-1 input.sk-toggleable__control:checked~label.sk-toggleable__label-arrow:before {content: \"▾\";}#sk-container-id-1 div.sk-estimator input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-label input.sk-toggleable__control:checked~label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 input.sk-hidden--visually {border: 0;clip: rect(1px 1px 1px 1px);clip: rect(1px, 1px, 1px, 1px);height: 1px;margin: -1px;overflow: hidden;padding: 0;position: absolute;width: 1px;}#sk-container-id-1 div.sk-estimator {font-family: monospace;background-color: #f0f8ff;border: 1px dotted black;border-radius: 0.25em;box-sizing: border-box;margin-bottom: 0.5em;}#sk-container-id-1 div.sk-estimator:hover {background-color: #d4ebff;}#sk-container-id-1 div.sk-parallel-item::after {content: \"\";width: 100%;border-bottom: 1px solid gray;flex-grow: 1;}#sk-container-id-1 div.sk-label:hover label.sk-toggleable__label {background-color: #d4ebff;}#sk-container-id-1 div.sk-serial::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: 0;}#sk-container-id-1 div.sk-serial {display: flex;flex-direction: column;align-items: center;background-color: white;padding-right: 0.2em;padding-left: 0.2em;position: relative;}#sk-container-id-1 div.sk-item {position: relative;z-index: 1;}#sk-container-id-1 div.sk-parallel {display: flex;align-items: stretch;justify-content: center;background-color: white;position: relative;}#sk-container-id-1 div.sk-item::before, #sk-container-id-1 div.sk-parallel-item::before {content: \"\";position: absolute;border-left: 1px solid gray;box-sizing: border-box;top: 0;bottom: 0;left: 50%;z-index: -1;}#sk-container-id-1 div.sk-parallel-item {display: flex;flex-direction: column;z-index: 1;position: relative;background-color: white;}#sk-container-id-1 div.sk-parallel-item:first-child::after {align-self: flex-end;width: 50%;}#sk-container-id-1 div.sk-parallel-item:last-child::after {align-self: flex-start;width: 50%;}#sk-container-id-1 div.sk-parallel-item:only-child::after {width: 0;}#sk-container-id-1 div.sk-dashed-wrapped {border: 1px dashed gray;margin: 0 0.4em 0.5em 0.4em;box-sizing: border-box;padding-bottom: 0.4em;background-color: white;}#sk-container-id-1 div.sk-label label {font-family: monospace;font-weight: bold;display: inline-block;line-height: 1.2em;}#sk-container-id-1 div.sk-label-container {text-align: center;}#sk-container-id-1 div.sk-container {/* jupyter's `normalize.less` sets `[hidden] { display: none; }` but bootstrap.min.css set `[hidden] { display: none !important; }` so we also need the `!important` here to be able to override the default hidden behavior on the sphinx rendered scikit-learn.org. See: https://github.com/scikit-learn/scikit-learn/issues/21755 */display: inline-block !important;position: relative;}#sk-container-id-1 div.sk-text-repr-fallback {display: none;}</style><div id=\"sk-container-id-1\" class=\"sk-top-container\"><div class=\"sk-text-repr-fallback\"><pre>RandomForestClassifier(n_estimators=1000)</pre><b>In a Jupyter environment, please rerun this cell to show the HTML representation or trust the notebook. <br />On GitHub, the HTML representation is unable to render, please try loading this page with nbviewer.org.</b></div><div class=\"sk-container\" hidden><div class=\"sk-item\"><div class=\"sk-estimator sk-toggleable\"><input class=\"sk-toggleable__control sk-hidden--visually\" id=\"sk-estimator-id-1\" type=\"checkbox\" checked><label for=\"sk-estimator-id-1\" class=\"sk-toggleable__label sk-toggleable__label-arrow\">RandomForestClassifier</label><div class=\"sk-toggleable__content\"><pre>RandomForestClassifier(n_estimators=1000)</pre></div></div></div></div></div>"
+      ],
+      "text/plain": [
+       "RandomForestClassifier(n_estimators=1000)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rfc = RandomForestClassifier(n_estimators=1000)\n",
+    "rfc.fit(features, labels)\n",
+    "\n",
+    "#y_pred = rfc.predict(X_test)\n",
+    "#probs = rfc.predict_proba(X_test)\n",
+    "#val_acc = accuracy_score(y_test, y_pred)\n",
+    "\n",
+    "#y_pred = rfc.predict(X_train)\n",
+    "#probs = rfc.predict_proba(X_train)\n",
+    "#train_acc = accuracy_score(y_train, y_pred)\n",
+    "\n",
+    "#print(train_acc, val_acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# submission (taken from xgboost)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rfc = RandomForestClassifier(n_estimators=1000,max_depth=2000,max_features=None,min_samples_leaf=2,min_samples_split=2, random_state=42)\n",
-    "rfc.fit(features, labels)\n",
-    "\n",
-    "y_pred = rfc.predict(X_test)\n",
-    "probs = rfc.predict_proba(X_test)\n",
-    "val_acc = accuracy_score(y_test, y_pred)\n",
-    "\n",
-    "y_pred = rfc.predict(X_train)\n",
-    "probs = rfc.predict_proba(X_train)\n",
-    "train_acc = accuracy_score(y_train, y_pred)\n",
-    "\n",
-    "print(train_acc, val_acc)\n",
-    "#0.9577482659448486 0.9236234458259325"
+    "test_set = test_prep.drop('type', axis=1)\n",
+    "results = rfc.predict(test_set)\n",
+    "submission = pd.DataFrame({'id': test_set.index ,'type': rfc.predict(test_set)})\n",
+    "type_lookup = pd.read_csv('data/type_lookup.csv')\n",
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())\n",
+    "submission.to_csv('submissions/submission_rf_full_SMOTE.csv', index=False)"
    ]
   },
   {
@@ -122,19 +176,126 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'wandb' has no attribute 'sweep'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [12], line 33\u001b[0m\n\u001b[0;32m     31\u001b[0m project \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mrf\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m     32\u001b[0m \u001b[39m# Initialize sweep by passing in config. (Optional) Provide a name of the project.\u001b[39;00m\n\u001b[1;32m---> 33\u001b[0m sweep_id \u001b[39m=\u001b[39m wandb\u001b[39m.\u001b[39;49msweep(sweep\u001b[39m=\u001b[39msweep_configuration, project\u001b[39m=\u001b[39mproject)\n\u001b[0;32m     35\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mmain\u001b[39m():\n\u001b[0;32m     36\u001b[0m     run \u001b[39m=\u001b[39m wandb\u001b[39m.\u001b[39minit(project\u001b[39m=\u001b[39mproject)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'wandb' has no attribute 'sweep'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Create sweep with ID: 2u6dhd1n\n",
+      "Sweep URL: https://wandb.ai/museum-item-classification/rf/sweeps/2u6dhd1n\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Agent Starting Run: k3sgk3rv with config:\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \tdepth: 100\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \testimators: 500\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \tfeatures: sqrt\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \tleaf: 5000\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \tsplit: 2\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mtillwenke\u001b[0m (\u001b[33mmuseum-item-classification\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: \u001b[33mWARNING\u001b[0m Ignored wandb.init() arg project when running a sweep.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "89481d4ee41e489197151fb2098c6c1e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='Waiting for wandb.init()...\\r'), FloatProgress(value=0.01666881186665705, max=1.0)…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.13.6 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.13.5"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/till/projects/uni/data science/museum_item_classification/wandb/run-20221207_191742-k3sgk3rv</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href=\"https://wandb.ai/museum-item-classification/rf/runs/k3sgk3rv\" target=\"_blank\">rare-sweep-1</a></strong> to <a href=\"https://wandb.ai/museum-item-classification/rf\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>Sweep page:  <a href=\"https://wandb.ai/museum-item-classification/rf/sweeps/2u6dhd1n\" target=\"_blank\">https://wandb.ai/museum-item-classification/rf/sweeps/2u6dhd1n</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.11093347544186873 0.0\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "5c1f3c8ecdd1470991298e757bb2f032",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Label(value='0.002 MB of 0.002 MB uploaded (0.000 MB deduped)\\r'), FloatProgress(value=1.0, max…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -159,16 +320,16 @@
     "    'metric': {'goal': 'maximize', 'name': 'val_acc'},\n",
     "    'parameters': \n",
     "    {\n",
-    "        'split': {'values': [2, 5, 7, 10, 12, 15, 20]},\n",
-    "        'depth': {'values': [3, 6, 10, 50, 100, 500, 1000, 2000]},\n",
-    "        'leaf': {'values': [2]},\n",
-    "        'estimators': {'values': [100, 200, 350, 500, 1000, 1500, 2000]},\n",
-    "        'features': {'values': [None]},\n",
+    "        'split': {'values': [2, 5, 10, 100]},\n",
+    "        'depth': {'values': [3, 6, 10, 50, 100, 1000]},\n",
+    "        'leaf': {'values': [2, 6, 10, 50, 100, 1000, 5000]},\n",
+    "        'estimators': {'values': [200, 500, 1000, 2000]},\n",
+    "        'features': {'values': [None, 'sqrt', 'log2']},\n",
     "\n",
     "     }\n",
     "}\n",
     "\n",
-    "project = 'rf_balanced'\n",
+    "project = 'rf'\n",
     "# Initialize sweep by passing in config. (Optional) Provide a name of the project.\n",
     "sweep_id = wandb.sweep(sweep=sweep_configuration, project=project)\n",
     "\n",
@@ -223,7 +384,7 @@
    "outputs": [],
    "source": [
     "import pickle\n",
-    "pickle.dump(rfc, open('./models/rf/rf_0.7_SMOTE_best_sweep_no_crossval', 'wb'))\n",
+    "pickle.dump(rfc, open('./models/rf/rf_full_SMOTE', 'wb'))\n",
     "loaded_model = pickle.load(open('./models/rf/rf_full_SMOTE', 'rb'))"
    ]
   },
@@ -291,7 +452,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -307,6 +468,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
