--- a/voter.ipynb
+++ b/voter.ipynb
@@ -9,50 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import re \n",
-    "from math import isnan\n",
-    "import wandb\n",
-    "import random\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "from xgboost import XGBClassifier\n",
-    "# utilities\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "import pickle\n",
-    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dtype={'type': str} prevents being confused with data type for large data sets\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
-    "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_curie = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
-    "test_curie = pd.read_csv('data/test_curie.csv', index_col='id', dtype={'type': str})\n",
-    "train_curie['curie_similarity'] = train_curie.curie_similarity.apply(eval).apply(np.array)\n",
-    "test_curie['curie_similarity'] = test_curie.curie_similarity.apply(eval).apply(np.array)"
+    "from setup_general import *\n",
+    "from setup_embedding import *"
    ]
   },
   {
@@ -648,7 +610,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -667,7 +629,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
