--- a/voter.ipynb
+++ b/voter.ipynb
@@ -9,59 +9,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Imports\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "from matplotlib import pyplot as plt\n",
-    "import re \n",
-    "from math import isnan\n",
-    "import wandb\n",
-    "import random\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "\n",
-    "from xgboost import XGBClassifier\n",
-    "# utilities\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
-    "import pickle\n",
-    "from pytorch_tabnet.tab_model import TabNetClassifier\n",
-    "\n",
-    "pd.set_option(\"display.max_columns\", None)\n",
-    "pd.set_option(\"display.max_colwidth\", None)\n",
-    "pd.set_option('display.max_rows', None)\n",
-    "pd.set_option('display.max_seq_items', None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dtype={'type': str} prevents being confused with data type for large data sets\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
-    "test_prep = pd.read_csv('data/test_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_prep = pd.read_csv('data/train_prepared.csv', index_col='id', dtype={'type': str})\n",
-    "train_curie = pd.read_csv('data/train_curie.csv', index_col='id', dtype={'type': str})\n",
-    "test_curie = pd.read_csv('data/test_curie.csv', index_col='id', dtype={'type': str})\n",
-    "train_curie['curie_similarity'] = train_curie.curie_similarity.apply(eval).apply(np.array)\n",
-    "test_curie['curie_similarity'] = test_curie.curie_similarity.apply(eval).apply(np.array)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "type_lookup = pd.read_csv('data/type_lookup.csv')"
+    "from setup_general import *\n",
+    "from setup_embedding import *"
    ]
   },
   {
@@ -88,37 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "types1 = ['photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image',\\\n",
-    "'archaeological find',\\\n",
-    "'graphics', 'drawing', 'design/drawing/sketch','caricature','slide',\\\n",
-    "'poster','plan', 'paper','notes', 'document', 'certificate',\\\n",
-    "'medal', 'coin', 'label/sign',\\\n",
-    "'manuscript','script, song/vocal music', 'music sheet', 'musical instrument', 'manuscript, musical composition', 'manuscript, sheet music',\\\n",
-    "'postcard', 'photo, postcard', 'letter, postcard',\\\n",
-    "'letter','letter of honor/honorary address',\\\n",
-    "       'seal', 'seal/imprint',\\\n",
-    "        'printed notes', 'small print',\\\n",
-    "        'packaging', 'crate/box',\\\n",
-    "        'audio recording', 'telegram',\\\n",
-    "       'invitation',  'calendar',\\\n",
-    "       'book','magazines', 'album', 'newspaper', 'folder/booklet',\\\n",
-    "       'country',\\\n",
-    "       'bag', 'suit', 'doll', 'sheet/linen', 'dish/vessel','jewel', 'tape/ribbon',\\\n",
-    "       'sculpture']"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# categorize types\n",
-    "types2 = [\n",
+    "# categorize and resort types\n",
+    "types = [\n",
     "'sculpture',\\\n",
     "'bag', 'suit', 'doll', 'sheet/linen', 'dish/vessel','jewel', 'tape/ribbon',\\\n",
     "'country',\\\n",
@@ -137,15 +65,6 @@
     "'archaeological find',\\\n",
     "'photo', 'photo negative', 'photographic negative, photographic negative', 'photographic material','digital image'\n",
     "]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 112,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "types = types1"
    ]
   },
   {
@@ -648,7 +567,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -667,7 +586,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
